--- a/index.html
+++ b/index.html
@@ -34,5 +34,80 @@
 
     </section>
 
+
+    <section id="product1" class="section-p1">
+        <h2>Featured Products</h2>
+        <p>Summer Collection New Modern Design</p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="img/products/f1.jpg" alt="Product 1">
+                <div class="description">
+                    <span>Brand Name</span>
+                    <h5>Product Title</h5>
+                    <h4>$29.99</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i> <!-- Half-star for a 4.5 rating -->
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                </div>
+            </div>
+            <div class="pro">
+                <img src="img/products/f2.jpg" alt="Product 2">
+                <div class="description">
+                    <span>Brand Name</span>
+                    <h5>Product Title</h5>
+                    <h4>$39.99</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i> <!-- Half-star for a 4.5 rating -->
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                </div>
+            </div>
+            <div class="pro">
+                <img src="img/products/f3.jpg" alt="Product 3">
+                <div class="description">
+                    <span>Brand Name</span>
+                    <h5>Product Title</h5>
+                    <h4>$49.99</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i> <!-- Half-star for a 4.5 rating -->
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                </div>
+            </div>
+            <div class="pro">
+                <img src="img/products/f4.jpg" alt="Product 4">
+                <div class="description">
+                    <span>Brand Name</span>
+                    <h5>Product Title</h5>
+                    <h4>$59.99</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i> <!-- Half-star for a 4.5 rating -->
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
+
+
 </body>
 </html>
